Add a way to pass jvm args to gradle and make it respect them (#86)